--- a/test_query.ipynb
+++ b/test_query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "1   1.6.0           6929           6571                94.833309"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "1   1.6.0                6571              1373       20.89"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "1   1.6.0                6396                48        0.75"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,6 +309,185 @@
     "ON tut_complete.version = lost.version\n",
     "''')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_152 = sqldf('''\n",
+    "    SELECT \n",
+    "        day_diff,\n",
+    "        COUNT(DISTINCT user) num_of_player\n",
+    "    FROM \n",
+    "        data \n",
+    "    WHERE \n",
+    "        version = '1.5.2'\n",
+    "    GROUP BY \n",
+    "        day_diff\n",
+    "''')\n",
+    "\n",
+    "df_160 = sqldf('''\n",
+    "    SELECT \n",
+    "        day_diff,\n",
+    "        COUNT(DISTINCT user) num_of_player\n",
+    "    FROM \n",
+    "        data \n",
+    "    WHERE \n",
+    "        version = '1.6.0'\n",
+    "    GROUP BY \n",
+    "        day_diff\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6671   6929\n"
+     ]
+    }
+   ],
+   "source": [
+    "player_count_152 = data[data['version'] == '1.5.2'].groupby('user')['day_diff'].max().value_counts().sum() \n",
+    "player_count_160 = data[data['version'] == '1.6.0'].groupby('user')['day_diff'].max().value_counts().sum()\n",
+    "\n",
+    "print(player_count_152, ' ', player_count_160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ver_152</th>\n",
+       "      <th>retention_rate_152</th>\n",
+       "      <th>ver_160</th>\n",
+       "      <th>retention_rate_160</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6663</td>\n",
+       "      <td>99.88</td>\n",
+       "      <td>6903</td>\n",
+       "      <td>99.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>26.68</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>28.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>891</td>\n",
+       "      <td>13.36</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>14.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>517</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>714</td>\n",
+       "      <td>10.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>385</td>\n",
+       "      <td>5.77</td>\n",
+       "      <td>520</td>\n",
+       "      <td>7.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>275</td>\n",
+       "      <td>4.12</td>\n",
+       "      <td>423</td>\n",
+       "      <td>6.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>202</td>\n",
+       "      <td>3.03</td>\n",
+       "      <td>334</td>\n",
+       "      <td>4.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>183</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>289</td>\n",
+       "      <td>4.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ver_152  retention_rate_152  ver_160  retention_rate_160\n",
+       "0     6663               99.88     6903               99.62\n",
+       "1     1780               26.68     1981               28.59\n",
+       "2      891               13.36     1036               14.95\n",
+       "3      517                7.75      714               10.30\n",
+       "4      385                5.77      520                7.50\n",
+       "5      275                4.12      423                6.10\n",
+       "6      202                3.03      334                4.82\n",
+       "7      183                2.74      289                4.17"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retention_rate = pd.DataFrame({\n",
+    "    'ver_152': df_152['num_of_player'],\n",
+    "    'retention_rate_152' : round(df_152['num_of_player'] / player_count_152 * 100, 2),\n",
+    "    'ver_160': df_160['num_of_player'],\n",
+    "    'retention_rate_160' : round(df_160['num_of_player'] / player_count_160 * 100, 2)\n",
+    "})\n",
+    "\n",
+    "retention_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
