--- a/test_query.ipynb
+++ b/test_query.ipynb
@@ -484,10 +484,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_lv_152 = data[data['version'] == '1.5.2'].groupby('user')['level'].max().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_lv_160 = data[data['version'] == '1.6.0'].groupby('user')['level'].max().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stat</th>\n",
+       "      <th>lv_152</th>\n",
+       "      <th>lv_160</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>count</td>\n",
+       "      <td>6671.000000</td>\n",
+       "      <td>6929.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mean</td>\n",
+       "      <td>9.414780</td>\n",
+       "      <td>10.321691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>std</td>\n",
+       "      <td>17.068243</td>\n",
+       "      <td>19.521062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>min</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25%</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50%</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>75%</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>max</td>\n",
+       "      <td>376.000000</td>\n",
+       "      <td>519.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    stat       lv_152       lv_160\n",
+       "0  count  6671.000000  6929.000000\n",
+       "1   mean     9.414780    10.321691\n",
+       "2    std    17.068243    19.521062\n",
+       "3    min     1.000000     1.000000\n",
+       "4    25%     3.000000     4.000000\n",
+       "5    50%     6.000000     6.000000\n",
+       "6    75%    11.000000    11.000000\n",
+       "7    max   376.000000   519.000000"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_lv = pd.DataFrame({\n",
+    "    'stat' : max_lv_152.index,\n",
+    "    'lv_152' : max_lv_152.values,\n",
+    "    'lv_160' : max_lv_160.values\n",
+    "})\n",
+    "\n",
+    "max_lv"
+   ]
   }
  ],
  "metadata": {
